# atlassian-agent

./: .bumpversion.cfg  .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  compose.yml  debug.Dockerfile  index.html  mcp_config.json  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  verify_tools.py
.specify/reports/: summary.json
atlassian_agent/: __init__.py  __main__.py  agent_server.py  auth.py  mcp_config.json  mcp_server.py  models.py
atlassian_agent/agent/: IDENTITY.md
atlassian_agent/agent_data/: MCP_AGENTS.md  knowledge_graph.db  mcp_config.json
atlassian_agent/api/: admin_cloud_api.py  api_access_cloud_api.py  api_client_admin_cloud.py  api_client_confluence_cloud.py  api_client_confluence_server.py  api_client_control_cloud.py  api_client_dlp_cloud.py  api_client_user_mgmt_cloud.py  api_client_user_provisioning_cloud.py  base.py  confluence_cloud_api.py  confluence_server_api.py  control_cloud_api.py  dlp_cloud_api.py  jira_cloud_api.py  jira_server_api.py  org_cloud_api.py  user_mgmt_cloud_api.py  user_provisioning_cloud_api.py
atlassian_agent/mcp/: __init__.py  mcp_atlassian.py  mcp_atlassian_admin.py  mcp_atlassian_api_access.py  mcp_atlassian_control.py  mcp_atlassian_dlp.py  mcp_atlassian_org.py  mcp_atlassian_user_mgmt.py  mcp_confluence_other.py  (+12 more)
concepts/: index.html
deployment/: index.html
docker/: Dockerfile  agent.compose.yml  compose.yml  debug.Dockerfile  mcp.compose.yml
docs/: concepts.md  deployment.md  index.md  installation.md  legacy_readme.md  overview.md  usage.md
installation/: index.html
legacy_readme/: index.html
overview/: index.html
scripts/: generate_atlassian_suite.py
search/: search_index.json
tests/: conftest.py  test_action_discovery.py  test_atlassian_agent_api_brute_force.py  test_auth.py  test_calendar_tools.py  test_concept_parity.py  test_init_dynamics.py  test_mcp_server_coverage.py  test_models.py  test_startup_coverage.py
usage/: index.html
(+35 files in other folders)
