[build-system]
requires = [ "setuptools>=80.9.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "atlassian-agent"
version = "0.32.0"
description = "Comprehensive AI agent for Jira and Confluence management."
readme = "README.md"
classifiers = [ "Development Status :: 4 - Beta", "License :: OSI Approved :: MIT License", "Environment :: Console", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3",]
requires-python = ">=3.11, <3.15"
dependencies = [ "agent-utilities[mcp]>=0.51.0", "atlassian-python-api",]
[[project.authors]]
name = "Audel Rouhi"
email = "knucklessg1@gmail.com"

[project.license]
text = "MIT"

[project.optional-dependencies]
mcp = [ "agent-utilities[mcp]>=0.51.0",]
agent = [ "agent-utilities[agent,logfire]>=0.51.0",]
all = [ "agent-utilities[mcp,agent,logfire]>=0.51.0",]
test = [
    "pytest-xdist>=3.6.0", "pytest", "pytest-asyncio", "pytest-cov",]

[project.scripts]
atlassian-mcp = "atlassian_agent.mcp_server:mcp_server"
atlassian-agent = "atlassian_agent.agent_server:agent_server"

[project.entry-points."agent_utilities.skill_providers"]
atlassian-agent = "atlassian_agent.skills"

[project.entry-points."agent_utilities.prompt_providers"]
atlassian-agent = "atlassian_agent.prompts"

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["atlassian_agent/mcp/"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
exclude = "atlassian_agent/mcp/"

[tool.setuptools.package-data]
atlassian_agent = [ "mcp_config.json", "skills/**", "prompts/**",]

[tool.ruff.lint]
select = [ "E", "F", "I", "UP", "B",]
ignore = [ "E402", "E501", "B008",]

[tool.setuptools.packages.find]
where = [ ".",]

[tool.vulture]
ignore_names = ["request", "config"]
exclude = [".venv", "venv", "tests/"]

[dependency-groups]
dev = [
    "pytest-timeout>=2.4.0",
]
